Center align footer title and revert text decoration for footer links; open footer issue link in new tab

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,7 @@ nav {
 .footer-title {
   font-family: 'Raleway', serif;
   font-size: 1.5em;
+  text-align: center;
 }
 
 .footer-links {
@@ -145,6 +146,7 @@ nav {
 .footer-issues a {
   font-family: 'Raleway', sans-serif;
   color: var(--light-2);
+  text-decoration: revert;
 }
 
 /* Keyframes */
